k8s/sqlserver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sqlserver
  namespace: inventory-app
  labels:
    app: sqlserver
spec:
  containers:
  - name: sqlserver
    image: mcr.microsoft.com/mssql/server:2022-latest
    ports:
    - containerPort: 1433
