k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-service
  namespace: inventory-app
spec:
  type: ClusterIP
  selector:
    app: inventory-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
